// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EcMetrolineCard should render as expected 1`] = `
<div
  class="ec-metroline-card ec-metroline-card--is-stand-alone"
  data-test="ec-metroline-card"
>
  <p>
    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
  </p>
</div>
`;

exports[`EcMetrolineCard when we set up the component props should render properly (when isCollapsed is false, isFirst is false, isLast is false, isStandAlone is false, and hasNarrowPadding is false) 1`] = `
<div
  class="ec-metroline-card"
  data-test="ec-metroline-card"
/>
`;

exports[`EcMetrolineCard when we set up the component props should render properly (when isCollapsed is false, isFirst is false, isLast is false, isStandAlone is false, and hasNarrowPadding is true) 1`] = `
<div
  class="ec-metroline-card ec-metroline-card--has-narrow-padding"
  data-test="ec-metroline-card"
/>
`;

exports[`EcMetrolineCard when we set up the component props should render properly (when isCollapsed is false, isFirst is false, isLast is false, isStandAlone is true, and hasNarrowPadding is false) 1`] = `
<div
  class="ec-metroline-card ec-metroline-card--is-stand-alone"
  data-test="ec-metroline-card"
/>
`;

exports[`EcMetrolineCard when we set up the component props should render properly (when isCollapsed is false, isFirst is false, isLast is true, isStandAlone is false, and hasNarrowPadding is false) 1`] = `
<div
  class="ec-metroline-card ec-metroline-card--is-last"
  data-test="ec-metroline-card"
/>
`;

exports[`EcMetrolineCard when we set up the component props should render properly (when isCollapsed is false, isFirst is true, isLast is false, isStandAlone is false, and hasNarrowPadding is false) 1`] = `
<div
  class="ec-metroline-card ec-metroline-card--is-first"
  data-test="ec-metroline-card"
/>
`;

exports[`EcMetrolineCard when we set up the component props should render properly (when isCollapsed is true, isFirst is false, isLast is false, isStandAlone is false, and hasNarrowPadding is false) 1`] = `
<div
  class="ec-metroline-card ec-metroline-card--is-collapsed"
  data-test="ec-metroline-card"
/>
`;

exports[`EcMetrolineCard when we set up the component props should render properly (when isCollapsed is true, isFirst is true, isLast is true, isStandAlone is true, and hasNarrowPadding is true) 1`] = `
<div
  class="ec-metroline-card ec-metroline-card--is-collapsed ec-metroline-card--is-first ec-metroline-card--is-last ec-metroline-card--is-stand-alone ec-metroline-card--has-narrow-padding"
  data-test="ec-metroline-card"
/>
`;
